fixed scroll button position on mobiles. increased line spacing

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html, body {
     background-color: springgreen; 
     font-family: 'Open Sans', sans-serif !important; 
 }
+body {
+    font-size: 15px; 
+    line-height: 1.6; 
+}
 
 h1,h4 { font-weight: 700; margin-bottom: 10px; }
 h2, h3 { font-weight: 300; color: #276bff;}
@@ -18,8 +22,12 @@ p.lead { text-align: center; color: #727878; }
 
 hr { margin: 40px 0px; border-color: #727878; opacity: 0.7; filter:alpha(opacity=70); }
 
-.icon { display: inline-block; background: url(images/t.png) no-repeat; height: 32px; width: 32px; }
-
+.icon { 
+    display: inline-block; 
+    background: url(images/t.png) no-repeat; 
+    height: 32px; 
+    width: 32px; 
+}
 
 ul.no-bullets { 
     list-style-type: none; 
@@ -49,9 +57,11 @@ ul.no-bullets {
     
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height: 100vh  !important;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     z-index: -1;
     margin: 0;
+    padding: 0;
     overflow: hidden;
 
 
@@ -224,7 +234,7 @@ ul.no-bullets {
 		top: 20px;		
 	}
 	.jumbotron .container { top: 20%; padding-top: 0px; }
-	.jumbotron .scroll-down { width: 100%; right: 0px; }
+	.jumbotron .scroll-down { bottom: 0%; width: 100%; right: 0px; }
 	
 	.navbar  { left: 0px; top: 0px; width: 100%; }
 	.navbar .nav > li { height: 60px; }
